--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "build": "tsc -b -v && rollup -c rollup.config.mjs",
     "clean": "rimraf dist/",
-    "test": "jest",
+    "format": "prettier --write src/**/*.ts",
+    "format:check": "prettier --check src/**/*.ts",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
     "package": "rimraf dist/ && npm run build && cp ./package.json ./dist/ && cp ./README.md ./dist/",
     "release": "semantic-release",
     "release:test": "semantic-release --debug --dry-run --no-ci --repositoryUrl git@github.com:thomaswinkler/cypress-1password.git",
+    "test": "jest",
     "yalc:publish": "cd dist/ && npx yalc publish && cd .."
   },
   "keywords": [
@@ -30,6 +34,7 @@
   "author": "thomaswinkler77@googlemail.com",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
@@ -40,7 +45,12 @@
     "@semantic-release/github": "^11.0.1",
     "@types/debug": "^4.1.12",
     "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.27.0",
+    "eslint-plugin-prettier": "^5.4.0",
     "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "rollup": "^4.41.0",
     "rollup-plugin-dts": "^6.2.1",
